// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with error banner 1`] = `
<header>
  <div
    class="error-message error-message--show"
  >
    Something went wrong. ¯\\_(ツ)_/¯
  </div>
  <h1>
    US Covid-19 
    deaths
  </h1>
</header>
`;

exports[`Header renders correctly without error banner 1`] = `
<header>
  <div
    class="error-message error-message--hide"
  >
    Something went wrong. ¯\\_(ツ)_/¯
  </div>
  <h1>
    US Covid-19 
    deaths
  </h1>
  <h2>
    2020-02-14
  </h2>
</header>
`;
